add date query parameters to lc route
